# first-game

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
apps/asmTest/: CMakeLists.txt  README.md
apps/asmTest/src/: entry.c  main.s
apps/firstGame/: CMakeLists.txt
apps/firstGame/include/: camera.h  globals.h  input.h  light.h  mesh.h  model.h  shader.h  texture.h  window.h
apps/firstGame/src/: globals.cpp  input.cpp  main.cpp  texture.cpp  window.cpp
apps/plain/: CMakeLists.txt
apps/plain/src/: main.cpp
apps/view/: CMakeLists.txt
glad/include/glad/: gl.h
libs/glad/: CMakeLists.txt  README.md
libs/stb/: CMakeLists.txt
models/cube/: cube.mtl
scripts/: build.sh  run.sh
shaders/: lamp.frag  lamp.vert  shaders.frag  shaders.vert
