set(PROJECT_NAME gladLibrary)
set(LIBRARY_NAME glad)
set(LIBRARY_HEADERS_DIR include)

set(LIBRARY_SOURCES_DIR src)
file(GLOB_RECURSE LIBRARY_HEADERS ${LIBRARY_HEADERS_DIR}/*.h)

set(LIBRARY_SOURCES ${LIBRARY_SOURCES_DIR}/gl.c)
file(GLOB_RECURSE LIBRARY_SOURCES ${LIBRARY_SOURCES_DIR}/*.c)

project(${PROJECT_NAME})
add_library(${LIBRARY_NAME} STATIC 
	${LIBRARY_SOURCES}
	${LIBRARY_HEADERS}
)

# target_include_directories(${LIBRARY_NAME} PRIVATE
#     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/${LIBRARY_NAME}>
#     $<INSTALL_INTERFACE:include/${LIBRARY_NAME}>
# )

target_include_directories(${LIBRARY_NAME} PUBLIC 
	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
	$<INSTALL_INTERFACE:include>
)

